--- a/nuevo-comprobante.html
+++ b/nuevo-comprobante.html
@@ -46,7 +46,7 @@
           data-bs-toggle="dropdown" aria-expanded="false">
           <strong>Mi usuario</strong>
         </a>
-        <ul class="dropdown-menu dropdown-menu-dark text-small shadow" aria-labelledby="dropdownUser1" style="">
+        <ul class="dropdown-menu dropdown-menu-dark text-small shadow" aria-labelledby="dropdownUser1">
           <li><a class="dropdown-item" href="#">Cerrar sesión</a></li>
         </ul>
       </div>
@@ -68,6 +68,31 @@
             </div>
             <div class="col">
               <button type="submit" class="btn btn-primary">Agregar</button>
+            </div>
+            <div><div id="containerProductList">
+              <h1>Productos</h1>
+              <table class="table">
+                  <thead>
+                      <tr>
+                          <th scope="col">Nombre</th>
+                          <th scope="col">Cantidad</th>
+                          <th scope="col">Precio</th>
+                      </tr>
+                      <form id="productForm">
+                        <tr>
+                          <td><input type="text" id="productName" placeholder="Nombre del producto" required></td>
+                          <td><input type="number" id="productQuantity" placeholder="Cantidad" required></td>
+                          <td><input type="number" id="productPrice" placeholder="Precio" required></td>
+                          <td><button id="addProductButton" type="submit">Agregar</button></td>
+                        </tr>
+                      </form>
+                  </thead>
+                  <tbody id="productsList">
+                    
+                  </tbody>
+                  
+              </table>
+          </div>
             </div>
           </div>
           <div class="row mb-3">
@@ -93,6 +118,7 @@
     </main>
   </section>
 
+  <script src="/process.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
     crossorigin="anonymous"></script>
