--- a/nuevo-producto.html
+++ b/nuevo-producto.html
@@ -1,120 +1,220 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Contablito</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <link rel="stylesheet" href="styles.css">
-</head>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="styles.css" />
+  </head>
 
-<body>
+  <body>
     <section class="d-flex">
-        <div class="d-flex flex-column flex-shrink-0 p-3 text-white bg-dark vh-100 me-3" style="width: 280px;">
-            <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-white text-decoration-none">
-                <span class="fs-4">Contablito</span>
-            </a>
-            <hr>
-            <ul class="nav nav-pills flex-column mb-auto">
-                <li class="dropdown nav-link">
-                    <a href="#" class="d-flex align-items-center text-white text-decoration-none dropdown-toggle"
-                    id="dropdown1" data-bs-toggle="dropdown" aria-expanded="false">Productos</a>
-                    <ul class="dropdown-menu dropdown-menu-dark shadow" aria-labelledby="dropdown1">
-                        <li><a class="dropdown-item" href="nuevo-producto.html">Nuevo producto</a></li>
-                        <li><a class="dropdown-item" href="#">Editar producto</a></li>
-                    </ul>
-                </li>
-                <li class="dropdown nav-link">
-                    <a href="#" class="d-flex align-items-center text-white text-decoration-none dropdown-toggle"
-                    id="dropdown1" data-bs-toggle="dropdown" aria-expanded="false">Comprobantes</a>
-                    <ul class="dropdown-menu dropdown-menu-dark shadow" aria-labelledby="dropdown1">
-                        <li><a class="dropdown-item" href="nuevo-comprobante.html">Nuevo comprobante</a></li>
-                        <li><a class="dropdown-item" href="#">Resumen de comprobantes</a></li>
-                    </ul>
-                </li>
-                <li>
-                    <a href="#" class="nav-link text-white">
-                        Movimientos de stock
-                    </a>
-                </li>
+      <div
+        class="d-flex flex-column flex-shrink-0 p-3 text-white bg-dark vh-100 me-3"
+        style="width: 280px"
+      >
+        <a
+          href="/"
+          class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-white text-decoration-none"
+        >
+          <span class="fs-4">Contablito</span>
+        </a>
+        <hr />
+        <ul class="nav nav-pills flex-column mb-auto">
+          <li class="dropdown nav-link">
+            <a
+              href="#"
+              class="d-flex align-items-center text-white text-decoration-none dropdown-toggle"
+              id="dropdown1"
+              data-bs-toggle="dropdown"
+              aria-expanded="false"
+              >Productos</a
+            >
+            <ul
+              class="dropdown-menu dropdown-menu-dark shadow"
+              aria-labelledby="dropdown1"
+            >
+              <li>
+                <a class="dropdown-item" href="nuevo-producto.html"
+                  >Nuevo producto</a
+                >
+              </li>
+              <li><a class="dropdown-item" href="#">Editar producto</a></li>
             </ul>
-            <hr>
-            <div class="dropdown">
-                <a href="#" class="d-flex align-items-center text-white text-decoration-none dropdown-toggle"
-                    id="dropdownUser1" data-bs-toggle="dropdown" aria-expanded="false">
-                    <strong>Mi usuario</strong>
-                </a>
-                <ul class="dropdown-menu dropdown-menu-dark text-small shadow" aria-labelledby="dropdownUser1" style="">
-                    <li><a class="dropdown-item" href="#">Cerrar sesión</a></li>
-                </ul>
-            </div>
+          </li>
+          <li class="dropdown nav-link">
+            <a
+              href="#"
+              class="d-flex align-items-center text-white text-decoration-none dropdown-toggle"
+              id="dropdown1"
+              data-bs-toggle="dropdown"
+              aria-expanded="false"
+              >Comprobantes</a
+            >
+            <ul
+              class="dropdown-menu dropdown-menu-dark shadow"
+              aria-labelledby="dropdown1"
+            >
+              <li>
+                <a class="dropdown-item" href="nuevo-comprobante.html"
+                  >Nuevo comprobante</a
+                >
+              </li>
+              <li>
+                <a class="dropdown-item" href="#">Resumen de comprobantes</a>
+              </li>
+            </ul>
+          </li>
+          <li>
+            <a href="#" class="nav-link text-white"> Movimientos de stock </a>
+          </li>
+        </ul>
+        <hr />
+        <div class="dropdown">
+          <a
+            href="#"
+            class="d-flex align-items-center text-white text-decoration-none dropdown-toggle"
+            id="dropdownUser1"
+            data-bs-toggle="dropdown"
+            aria-expanded="false"
+          >
+            <strong>Mi usuario</strong>
+          </a>
+          <ul
+            class="dropdown-menu dropdown-menu-dark text-small shadow"
+            aria-labelledby="dropdownUser1"
+          >
+            <li><a class="dropdown-item" href="#">Cerrar sesión</a></li>
+          </ul>
         </div>
-        <main class="mt-3 w-100">
-            <div class="content">
-                <h2>Ingreso de productos</h2>
-                <form class="form mt-5 me-3" method="post" onsubmit="addProduct(event)">
-                  <div class="mb-3">
-                      <div class="col">
-                          <label for="">ID:</label>
-                          <input type="text" class="form-control border-0 bg-transparent" id="productId" readonly placeholder="Identificador">
-                      </div>
-                  </div>
-                  <div class="row mb-3">
-                      <div class="col">
-                          <input type="text" class="form-control" id="productName" placeholder="Nombre del producto">
-                      </div>
-                  </div>
-                  <div class="row mb-3">
-                      <div class="col">
-                          <textarea class="form-control" id="description" placeholder="Descripción del producto" style="height: 200px"></textarea>
-                      </div>
-                  </div>
-                  <div class="row mb-3">
-                      <div class="col-auto">
-                          <input type="number" class="form-control" id="quantity" placeholder="Cantidad">
-                      </div>
-                      <div class="col-auto">
-                          <input type="number" class="form-control" id="minStock" placeholder="Stock mínimo">
-                      </div>
-                      <div class="col-auto">
-                          <input type="number" class="form-control" id="price" placeholder="Precio">
-                      </div>
-                  </div>
-                  <fieldset class="row mb-3">
-                      <legend class="col-form-label pt-0">Tipo de IVA</legend>
-                      <div class="col-sm-10">
-                          <div class="form-check">
-                              <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios1" value="0">
-                              <label class="form-check-label" for="gridRadios1">
-                                  Exento - 0%
-                              </label>
-                          </div>
-                          <div class="form-check">
-                              <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios2" value="10">
-                              <label class="form-check-label" for="gridRadios2">
-                                  IVA Mínimo - 10%
-                              </label>
-                          </div>
-                          <div class="form-check">
-                              <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios3" value="22" checked>
-                              <label class="form-check-label" for="gridRadios3">
-                                  IVA Básico - 22%
-                              </label>
-                          </div>
-                      </div>
-                  </fieldset>
-                  <button type="submit" class="btn btn-primary mt-3" id="saveButton">Guardar</button>
-              </form>              
+      </div>
+      <main class="mt-3 w-100">
+        <div class="content">
+          <h2>Ingreso de productos</h2>
+          <form
+            class="form mt-5 me-3"
+            method="post"
+            onsubmit="addProduct(event)"
+          >
+            <div class="mb-3">
+              <div class="col">
+                <label for="">ID:</label>
+                <input
+                  type="text"
+                  class="form-control border-0 bg-transparent"
+                  id="productId"
+                  readonly
+                  placeholder="Identificador"
+                />
+              </div>
             </div>
-        </main>
+            <div class="row mb-3">
+              <div class="col">
+                <input
+                  type="text"
+                  class="form-control"
+                  id="productName"
+                  placeholder="Nombre del producto"
+                />
+              </div>
+            </div>
+            <div class="row mb-3">
+              <div class="col">
+                <textarea
+                  class="form-control"
+                  id="description"
+                  placeholder="Descripción del producto"
+                  style="height: 200px"
+                ></textarea>
+              </div>
+            </div>
+            <div class="row mb-3">
+              <div class="col-auto">
+                <input
+                  type="number"
+                  class="form-control"
+                  id="quantity"
+                  placeholder="Cantidad"
+                />
+              </div>
+              <div class="col-auto">
+                <input
+                  type="number"
+                  class="form-control"
+                  id="minStock"
+                  placeholder="Stock mínimo"
+                />
+              </div>
+              <div class="col-auto">
+                <input
+                  type="number"
+                  class="form-control"
+                  id="price"
+                  placeholder="Precio"
+                />
+              </div>
+            </div>
+            <fieldset class="row mb-3">
+              <legend class="col-form-label pt-0">Tipo de IVA</legend>
+              <div class="col-sm-10">
+                <div class="form-check">
+                  <input
+                    class="form-check-input"
+                    type="radio"
+                    name="gridRadios"
+                    id="gridRadios1"
+                    value="0"
+                  />
+                  <label class="form-check-label" for="gridRadios1">
+                    Exento - 0%
+                  </label>
+                </div>
+                <div class="form-check">
+                  <input
+                    class="form-check-input"
+                    type="radio"
+                    name="gridRadios"
+                    id="gridRadios2"
+                    value="10"
+                  />
+                  <label class="form-check-label" for="gridRadios2">
+                    IVA Mínimo - 10%
+                  </label>
+                </div>
+                <div class="form-check">
+                  <input
+                    class="form-check-input"
+                    type="radio"
+                    name="gridRadios"
+                    id="gridRadios3"
+                    value="22"
+                    checked
+                  />
+                  <label class="form-check-label" for="gridRadios3">
+                    IVA Básico - 22%
+                  </label>
+                </div>
+              </div>
+            </fieldset>
+            <button type="submit" class="btn btn-primary mt-3" id="saveButton">
+              Guardar
+            </button>
+          </form>
+        </div>
+      </main>
     </section>
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-    crossorigin="anonymous"></script>
-<script src="product.js"></script>
-</body>
-
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+      crossorigin="anonymous"
+    ></script>
+    <script src="product.js"></script>
+  </body>
 </html>
